--- a/views/friend/discover.jade
+++ b/views/friend/discover.jade
@@ -8,9 +8,9 @@ block content
             li(role="presentation",class="active")
                 a(href="/friend/discover") Discover Friends
             li(role="presentation")
-                a(href="/friend/find") find Friends
+                a(href="/friend/find") Find Friends
             li(role="presentation")
-                a(href="/friend/list") Friends list
+                a(href="/friend/list") Friend list
                 
     div(class="container")
         div(class="row")
