Did some housekeeping on index.jade, layout.jade, likeStuff.jade, login.jade, newlike.jade, viewlike.jade, viewotheruser.jade, and viewuser.jade - edited them such that they are more consistent and clear

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
             a(href='/friend/discover').btn.btn-success Friends
             a(href='/likeStuff').btn.btn-success Like Stuff
             a(href='/mail').btn.btn-success Mail
-            a(href='/viewuser?_id=#{currentUser._id}').btn.btn-success Account info
+            a(href='/viewuser?_id=#{currentUser._id}').btn.btn-success Account Info
           else
             a(href='http://localhost:2200/Login').btn.btn-warning Log In
             a(href='http://localhost:2200/newuser').btn.btn-warning Register
