--- a/views/index.jade
+++ b/views/index.jade
@@ -10,5 +10,5 @@ block content
 	a(href='/newuser').btn.btn-success Add User Account
 
 	<br /><br />
-	a(href='/dashboard').btn.btn-warning See Dashboard
-	a(href='/login').btn.btn-danger Login
+	a(href='/dashboard').btn.btn-warning View Dashboard
+	a(href='/login').btn.btn-danger Log In
