--- a/views/viewotheruser.jade
+++ b/views/viewotheruser.jade
@@ -5,7 +5,7 @@ block content
 	each user, i in userlist
 		form#AddUser(role="form", method="post",action="/befrienduser?_id=#{user._id}")
 			.form-group
-				label Enter User Name
+				label Enter Username
 				input.form-control#inputUserName(type="text", placeholder="username"
 					, name="username" value="#{user.username}" Disabled)
 				
