Made newuser.jade consistent with login.jade, as well as edited layout.jade such that 'user' is replaced with 'currently logged in as'

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
         nav#left
           if (currentUser)
             &nbsp &nbsp
-            label#thisUser User:    #{currentUser.username}
+            label#thisUser Currently logged in as:    #{currentUser.username}
 
         nav#right
           if (currentUser)
