--- a/views/newuser.jade
+++ b/views/newuser.jade
@@ -4,7 +4,7 @@ block content
 	//h1= title
 	form#AddUser(role="form", method="post",action="/adduser")
 		.form-group
-			label Enter User Name
+			label Enter Username
 			input.form-control(type="text", placeholder="username", name="username")
 		.form-group
 			label(for="useremail") Enter Email Address
@@ -19,20 +19,20 @@ block content
 			input.form-control#inputUserPasswordValid(type="password"
 				, placeholder="confirm user password", name="userpasswordvalid")
 		.form-group
-			label(for="status") Enter Status
+			label(for="status") Choose Status
 			select(name="status")
 				option(value="Initialized", selected="selected") Initialized
 				option(value="Active") Active
 				option(value="Locked Out") Locked Out
 				
 		.form-group
-			label(for="role") Enter Role
+			label(for="role") Choose Role
 			select(name="role")
 				option(value="Free") Free Account
 				option(value="Basic") Basic Account
 				option(value="Premium", selected="selected") Premium Account
 				
-		button#btnSubmit(type="submit").btn.btn-danger submit
+		button#btnSubmit(type="submit").btn.btn-danger Submit
 		if messges
 			each msg, i in messges
 				p #{msg.msg}	
