Wrote normal.css such that the background color, among other minor details, is changed

--- a/public/css/normal.css
+++ b/public/css/normal.css
@@ -1,9 +1,11 @@
-//body {background-color:#252627;}
+/* Written by scienceiscool */
 
-body {background-color:lightblue;}
+body {
+  width: auto;
+  background-color: #EA2D40;
+}
 
-.btn
-{
-	padding:2px;
-	margin-right: 1px;
+.btn {
+  padding: 5px;
+  margin-left: 1px;
 }
