--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@
    Reference: https://developer.mozilla.org/en-US/docs/Web/CSS/Reference
 */
 
-
 body {
   padding: 15px;
   font-size: small;
@@ -13,117 +12,27 @@ a {
   color: #141515;
 }
 
-.dash {
-  float: left;
-  width: 30%;
+#AddUser {
+  padding: 6%;
 }
 
-
-#AddUser{
-	padding-left: 5%;
-	padding-top: 5%;
-}
-#AddUser input{
-	width: 200px;
-}
-#AddTimesheet input{
-	width: 200px;
+#AddUser input { /* Controls size of text boxes to log in or create account */
+  width: 500px;
 }
 
-#AddTimesheet textarea{
-	resize: none; 
-	width: 200px;
-}
-#AddProject input{
-	width: 200px;
-		padding-left: 5%;
-	padding-top: 5%
-}
-
-#AddProject textarea{
-	resize: none; 
-	width: 200px;
-
-}
-
-#AddTask input{
-	width: 200px;
-}
-
-#editProject input{
-	width: 500px;
-}
-
-.table {
-	float:left;
-	width: 1000px;
-}
-
-th {
-	color: #00b7FF;
-}
-
-.shadow {
-   -moz-box-shadow:    inset 0 0 10px #000000;
-   -webkit-box-shadow: inset 0 0 10px #000000;
-   box-shadow:         inset 0 0 10px #000000;
-}
-
-.box
-{
-	border:2px solid #a1a1a1;
-	padding:0px 5px; 
-	background:white;
-	margin-left:5px;
-	margin-top:5px;
-	margin-bottom:5px;
-	height:200px;
-	width:200px;
-	float:left;
-	border-radius:10px;
-	text-align:left;
-	text-shadow:1px 0px 0px #ffffff;
-	display:inline-block;
-	vertical-align: center;
-}
-.box:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #d1c2d1), color-stop(1, #f9f9f9) );
-	background:-moz-linear-gradient( center top, #d1c2d1 5%, #f9f9f9 50% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d1c2d1', endColorstr='#f9f9f9');
-	background-color:#d1c2d1;
-}.box:active {
-	position:relative;
-	top:1px;
-}
 header {
-  padding: 1px 0 1px 0;
-  background: blue;
+  padding: 8px;
+  background: #FC7830;
   overflow: auto;
-  text-align: center;
-  border-bottom: 1px solid #ddd;
+  text-align: left;
+  border: 2px #ddd dotted;
 }
 
-/*
-h1 {
-  font-family: 'Ubuntu', sans-serif;
-  font-style: italic;
-  font-size: 3em;
-  color: #b33;
-  float: left;
-  width: 570px;
-}
-*/
 header nav#right {
   float: right;
-  //width: 400px;
 }
 
 header nav#left {
   float: left;
-  //width: 285px;
-}
-
-#thisUser {
-	text-align:center;
-	float: center;
+  width: 200px;
 }
