--- a/views/login.jade
+++ b/views/login.jade
@@ -12,7 +12,7 @@ block content
       .form-group
         a(href="newuser") Don't have an account yet? Click here.
 
-      button#btnSubmit(type="submit").btn.btn-danger Submit
+      button#btnSubmit(type="submit").btn.btn-primary Submit
 
       if (reason) 
         .form-group
