--- a/views/newuser.jade
+++ b/views/newuser.jade
@@ -19,20 +19,20 @@ block content
 			input.form-control#inputUserPasswordValid(type="password"
 				, placeholder="confirm user password", name="userpasswordvalid")
 		.form-group
-			label(for="status") Choose Status
+			label#dropdown(for="status") Choose Status
 			select(name="status")
 				option(value="Initialized", selected="selected") Initialized
 				option(value="Active") Active
 				option(value="Locked Out") Locked Out
 				
 		.form-group
-			label(for="role") Choose Role
+			label#dropdown(for="role") Choose Role
 			select(name="role")
 				option(value="Free") Free Account
 				option(value="Basic") Basic Account
 				option(value="Premium", selected="selected") Premium Account
 				
-		button#btnSubmit(type="submit").btn.btn-danger Submit
+		button#btnSubmit(type="submit").btn.btn-primary Submit
 		if messges
 			each msg, i in messges
 				p #{msg.msg}	
