--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,10 @@ a {
   width: 500px;
 }
 
+#Dropdown {
+  
+}
+
 header {
   padding: 8px;
   background: #FC7830;
@@ -29,10 +33,13 @@ header {
 }
 
 header nav#right {
+  margin: 5px;
   float: right;
 }
 
 header nav#left {
+  font-style: italic;
+  margin: 6px;
   float: left;
   width: 200px;
 }
