--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ a {
 
 header {
   padding: 8px;
-  background: #FC7830;
+  background: #FC4B1F;
   overflow: auto;
   text-align: left;
   border: 2px #ddd dotted;
