Capitalized F in Find Friends on friends pages. Rewrote friends list logic: implemented 'add/delete friend', implemented live user like comparison capability, all data stored in mongo. Just need to add a 'pending requests' page for a user to 'accept/reject' anyone who's asked. This functionality is already coded into the add/delete friend logic, so we just need to add a quick and easy page to find all requests.

--- a/views/friend/discover.jade
+++ b/views/friend/discover.jade
@@ -8,7 +8,7 @@ block content
             li(role="presentation",class="active")
                 a(href="/friend/discover") Discover Friends
             li(role="presentation")
-                a(href="/friend/find") find Friends
+                a(href="/friend/find") Find Friends
             li(role="presentation")
                 a(href="/friend/list") Friends list
                 
