--- a/views/friend/list.jade
+++ b/views/friend/list.jade
@@ -8,7 +8,7 @@ block content
             li(role="presentation",class="active")
                 a(href="/friend/discover") Discover Friends
             li(role="presentation")
-                a(href="/friend/find") find Friends
+                a(href="/friend/find") Find Friends
             li(role="presentation")
                 a(href="/friend/list") Friends list
                 
