Added friend requests page and URI, added api support for it as well as jquery dom updates. Just need to get it to refresh the on-screen data on add/reject actions in the friend requests page.

--- a/views/friend/list.jade
+++ b/views/friend/list.jade
@@ -10,8 +10,9 @@ block content
             li(role="presentation")
                 a(href="/friend/find") Find Friends
             li(role="presentation")
+                a(href="/friend/pending") Friend Requests
+            li(role="presentation")
                 a(href="/friend/list") Friends list
-                
     div(class="container")
         div(class="row")
             h1(class="col-md-6") Friends
