--- a/views/friend/pending.jade
+++ b/views/friend/pending.jade
@@ -15,13 +15,13 @@ block content
                 a(href="/friend/list") Friends list
     div(class="container")
         div(class="row")
-            h1(class="col-md-4") Search for people
-            div(class="col-md-4 pull-right")
-                form(class="form-inline",id="searchForm")
-                    div(class="form-group")
-                        input(type="text",class="form-control",id="searchName",placeholder="Search name")
-                        button(type="submit",class="btn btn-default")
-                            span(class="glyphicon glyphicon-search")
-        div(class="row findfriends")
+            h1(class="col-md-6") Friend Requests
+            nav(class="col-md-3 pull-right")
+                ul(class="pagination pull-right")
+                    li
+                        a(href="#",id="prev") Previous
+                    li
+                        a(href="#",id="next") Next
+        div(class="row friendspending")
 block footer
   script(src="/js/friend.js")
