--- a/views/friend/discover.jade
+++ b/views/friend/discover.jade
@@ -5,11 +5,11 @@ extends ../layout
 block content
     div(class='container')
         ul(class='nav nav-pills',role="tablist")
-            li(role="presentation",class="active")
+            li(role="presentation", class="active")
                 a(href="/friend/discover") Discover Friends
-            li(role="presentation")
+            li(class="not-selected", role="presentation")
                 a(href="/friend/find") Find Friends
-            li(role="presentation")
+            li(class="not-selected", role="presentation")
                 a(href="/friend/list") Friend list
                 
     div(class="container")
