--- a/views/friend/list.jade
+++ b/views/friend/list.jade
@@ -3,11 +3,11 @@
 
 extends ../layout
 block content
-    div(class='container')
-        ul(class='nav nav-pills',role="tablist")
-            li(role="presentation")
+    div(class="container")
+        ul(class="nav nav-pills", role="tablist")
+            li(class="not-selected", role="presentation")
                 a(href="/friend/discover") Discover Friends
-            li(role="presentation")
+            li(class="not-selected", role="presentation")
                 a(href="/friend/find") Find Friends
             // scienceiscool edited this section,
             // took the class="active" that was originally above
