Commented out lines that had text-align: center for the text in friends tabs in style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,12 +22,12 @@ ul .nav.nav-pills {
 
 .row .col-md-6 {
   font-size: x-large;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .row .col-md-4 {
   font-size: x-large;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 #AddUser {
