Add code to style.css such that text being typed into a text box will appear black and not gray like the placeholder

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,10 @@ ul .nav.nav-pills {
   padding: 5px;
 }*/
 
+.form-control { /* This controls the text being typed into a text box on the log in or create account page */
+  color: black;
+}
+
 .row .col-md-6 {
   font-size: x-large;
   /*text-align: center;*/
