--- a/views/friend/pending.jade
+++ b/views/friend/pending.jade
@@ -1,27 +1,27 @@
 //
-   Created by zaephor on 3/21/15.
+   Created by Eric on 4/4/15.
 
 extends ../layout
 block content
-    div(class='container')
-        ul(class='nav nav-pills',role="tablist")
-            li(role="presentation",class="active")
-                a(href="/friend/discover") Discover Friends
-            li(role="presentation")
-                a(href="/friend/find") Find Friends
-            li(role="presentation")
-                a(href="/friend/pending") Friend Requests
-            li(role="presentation")
-                a(href="/friend/list") Friends list
-    div(class="container")
-        div(class="row")
-            h1(class="col-md-6") Friend Requests
-            nav(class="col-md-3 pull-right")
-                ul(class="pagination pull-right")
-                    li
-                        a(href="#",id="prev") Previous
-                    li
-                        a(href="#",id="next") Next
-        div(class="row friendspending")
+  div(class='container')
+    ul(class='nav nav-pills',role="tablist")
+      li(role="presentation",class="active")
+        a(href="/friend/discover") Discover Friends
+      li(role="presentation")
+        a(href="/friend/find") Find Friends
+      li(role="presentation")
+        a(href="/friend/pending") Friend Requests
+      li(role="presentation")
+        a(href="/friend/list") Friends list
+  div(class="container")
+    div(class="row")
+      h1(class="col-md-6") Friend Requests
+      nav(class="col-md-3 pull-right")
+        ul(class="pagination pull-right")
+          li
+            a(href="#",id="prev") Previous
+          li
+            a(href="#",id="next") Next
+    div(class="row friendspending")
 block footer
   script(src="/js/friend.js")
