Corrected 2 hardcoded URIs that I must've missed last week in the layout jade file

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,8 +30,8 @@ html
             a(href='/help').btn.btn-primary Help
             a(href='/logout').btn.btn-danger Logout
           else
-            a(href='http://localhost:2200/Login').btn.btn-primary Log In
-            a(href='http://localhost:2200/newuser').btn.btn-primary Register
+            a(href='/login').btn.btn-primary Log In
+            a(href='/newuser').btn.btn-primary Register
 
     block content
     block footer
