--- a/views/compose.jade
+++ b/views/compose.jade
@@ -24,7 +24,6 @@ block content
 				div(class='input-group')
 					span(class='input-group-addon',id='sizing-addon2') Message   		
 					textarea(class='form-control',rows='5',placeholder="Enter your message here...", name='Message', style="resize:none")
-					//span(class="input-group-addon btn btn-primary glyphicon glyphicon-send", type="submit")
-			button(type='submit',class="input-group-addon btn btn-primary glyphicon glyphicon-send", align='right')
-					//	span(class='glyphicon glyphicon-send', aria-hidden='true') Send
+				button(type='submit',class="input-group-button btn btn-primary", align='right') Send
+					span(class='glyphicon glyphicon-send', aria-hidden='true')
 			div(class='col-md-2')
