--- a/views/newlike.jade
+++ b/views/newlike.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 	h1= title
-	div(class='col-md-7')
+	div(class='col-md-5')
 		form#AddProject(role="form", method="post", action="/addlike")
 			.form-group
 				label(for="category") Choose Category
@@ -26,9 +26,12 @@ block content
 				each msg, i in messges
 					p #{msg.msg}
 
-	div(class="col-md-3")
-		div(id='search', class="navbar-header")
-			input.form-control(id='key', type='text', class="form-control", placeholder="Enter something..")
-			input.form-control(id='submit', type='button', value='submit', class="btn btn-info")
-		div(id='results')
-		script(src="/js/search.js", type="text/javascript")
+	div(class="col-md-5")
+		div(class='row')
+			div(id='search', class="navbar-header")
+				input.form-control(id='key', type='text', class="form-control", placeholder="Enter something..")
+				input.form-control(id='submit', type='button', value='submit', class="btn btn-info")
+		div(class='row')
+			div(id='results')
+
+	script(src="/js/search.js", type="text/javascript")
