Added a functionality to the css for the message list that allows to the message to be cutoff if it is too long to fit in the list. It now cuts it off and replace elipses in the end.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,3 +66,12 @@ header nav#left {
   float: left;
   width: 200px;
 }
+
+/*Obtained from:
+http://stackoverflow.com/questions/21447269/how-to-limit-the-length-of-text-in-a-paragraph*/
+#brief-message {
+     width: 750px;
+     white-space: nowrap;
+     overflow: hidden;
+     text-overflow: ellipsis;
+}
