--- a/views/respond.jade
+++ b/views/respond.jade
@@ -14,7 +14,7 @@ block content
 			div(class='jumbotron')
 				div(class='row')
 					div(class='col-md-2')
-					div(class='well contianer col-md-8' id='chat')
+					div(class='well contianer col-md-8', id='chat')
 						each line in bod
 							p #{message.From} : #{line.friend_username}
 					div(class='col-md-2')
