Changed the text color to black on select and option tags. Currently works for firefox and chrome for mac

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,8 +47,11 @@ ul .nav.nav-pills {
   color: #040705;
 }
 
+select {
+  color: black;
+}
 option {
-  color:black;
+  color: black;
 }
 
 header {
