--- a/views/newlike.jade
+++ b/views/newlike.jade
@@ -6,10 +6,10 @@ block content
 		.form-group
 			label(for="category") Choose Category
 			select(name="category")
-				option(value="Books", selected="selected") Books
+				option(value="Books" selected) Books
 				option(value="Friends") Friends
 				option(value="Movies") Movies
-				option(value="Searches") Searches		
+				option(value="Searches") Searches
 		.form-group
 			label Like Name
 			input.form-control(type="text", placeholder="Name", name="name")
