Removed/disabled pagination from Friends pages, it was not complete

--- a/views/friend/list.jade
+++ b/views/friend/list.jade
@@ -22,7 +22,8 @@ block content
   div(class="container")
     div(class="row")
       h1(class="col-md-6") Friends
-      nav(class="col-md-3 pull-right")
+      // Disabled because pagination is not ready
+      //nav(class="col-md-3 pull-right")
         ul(class="pagination pull-right")
           li
             a(href="#",id="prev") Previous
