Bruna's code on about us and help changed from html to jade

--- a/views/help.jade
+++ b/views/help.jade
@@ -1,4 +1,14 @@
 extends layout
 
 block content
-  h3 Hi! You've reached the Help page.
+	div(class="container")
+		div(class="col-md-5")
+			h2 What do we do?
+			p We help you to connect with other people with similar interests with you. The Hangdog Happenstance suggest friends for you to meet based what you both like. On our website, you are able to find people and talk to people that like the same stuff that you do!
+			h2 How to create an account?
+			p Click on register, pick a valid username, email and password, choose the status and role and you are all set to be part of the Hangdog Happenstance.
+			h2 What is the url to the login page?
+			p Just follow this link 
+				a(href="http://localhost:3000/login") here
+		div(class="col-md-7")
+			img(src="/images/find-people.jpg", alt="connecting people", width="420", height="480")
