Added image referrence for help.jade

--- a/views/help.jade
+++ b/views/help.jade
@@ -11,4 +11,5 @@ block content
 			p Just follow this link 
 				a(href="http://localhost:3000/login") here
 		div(class="col-md-7")
+			<!-- Image taken from: http://jonmell.co.uk/find-people-you-need/ using Google Search --> 
 			img(src="/images/find-people.jpg", alt="connecting people", width="420", height="480")
